--- a/day1/toby02.html
+++ b/day1/toby02.html
@@ -27,11 +27,10 @@ document.write($abd + "<br>");
 <hr>
 <script>
 const name = 'Toby'; //常數
+// const name = 'Toby2'; //常數不可以重複給值，第一次給值就給死了
 document.write("My name is " + name + "." + "<br>");
 document.write(`My name is ${name} . <br>`); // 倒引號會將變數進行置換
 let a = 10 , b = 3;
 document.write(`${a} + ${b} = ${a+b}`); // 倒引號可以進行運算
-
-
 
 </script>
