--- a/day1/toby13.html
+++ b/day1/toby13.html
@@ -12,4 +12,10 @@ switch(month){
         document.write('有30天');
         break;
 }
+document.write('<hr>');
+
+let c = 3,d=2;
+document.write(c ^ d);
+document.write(c | d);
+document.write(c & d);
 </script>
