--- a/day1/toby17.html
+++ b/day1/toby17.html
@@ -1,8 +1,8 @@
 <script>
-let p = [0,0,0,0,0,0,0,0,0];
-for(let i = 0;i < 100;i++){
-    let  rand = parseInt(Math.random()*6);
-    p[rand]++;
+let p = [0,0,0,0,0,0];
+for(let i = 0;i < 1000000;i++){
+    let  rand = parseInt(Math.random()*9);
+    p[rand >= 6 ? rand -3 : rand]++;    
 }
 for(let i = 0;i < p.length;i++){
     document.write(`${i+1}點出現${p[i]}次<br>`);
