--- a/day2/poker.html
+++ b/day2/poker.html
@@ -19,9 +19,11 @@ for(let i = 0 ; i < 52 ; i++){
     }
     
 }
-
+for(let i in poker){
+    document.write(poker[i] + "<br>");
+}
 let person = [];
 for(let i = 0 ; i < 52 ; i++){
-    
+
 }
 </script>
