--- a/day2/toby10.html
+++ b/day2/toby10.html
@@ -8,10 +8,10 @@ function checkID(){
 </script>
 
 <form action="">
-    Name:<input type="text" /> <br>
-    ID:<input type="text" id="twid" onblur="checkID()"/> <br>
+    Name: <input type="text" /> <br>
+    ID: <input type="text" id="twid" onblur="checkID()"/> <br>
     <span id="idmsg"></span><br> 
-    Gender:<input type="radio" name="gender" checked/>Male
+    Gender: <input type="radio" name="gender" checked/>Male
     <input type="radio" name="gender">Female
 </form>
 
@@ -19,7 +19,7 @@ function checkID(){
 
 
 <script>
-let id = "M220500513";
+let id = "L123456789";
 document.write(checkTWID(id));
 
 document.write("<hr>");
