--- a/day3/toby01.html
+++ b/day3/toby01.html
@@ -38,9 +38,29 @@
 <input type="number" id="input">
 <input type="button" value="Guess" onclick="doGuess()">
 <input type="button" value="replay" onclick="resetGame()">
+<select name="dd" id="dd">
+    <option value="1">1</option>
+    <option value="2">2</option>
+    <option value="3">3</option>
+    <option value="4">4</option>
+    <option value="5">5</option>
+    <option value="6">6</option>
+    <option value="7">7</option>
+    <option value="8">8</option>
+    <option value="9">9</option>
+</select>
 <hr>
 <div id="log">
 
 </div>
+
+
+
+
+<!-- 檢查 -->
+<!-- 美化 -->
+<!-- 輸入的值不能有重複的 -->
+<!-- 跳提醒 -->
+<!-- 輸入答案間隔不能超過10秒 -->
 
 
