--- a/homework2/index.html
+++ b/homework2/index.html
@@ -161,5 +161,11 @@
             </div>
         </div>
     </div> -->
+    
+    <!-- 以下這兩個  二選一 -->
+    
+    <!-- 麻仔台 -->
+    <!-- 隨機產生磚塊並且去用球去碰撞他 -->
+
 </body>
 </html>
